Modify the code, compatible with java8, please use java compile push package maven center